src/test/deca/syntax/valid/provided/decl_class_asm.deca
// Description:
//    Déclaration de classe
//
// Resultats:
//    Rien
//
// Historique:
//    cree le 01/01/2021

 class A {
    	
    int test(){
        asm("C'EST UN TEST");
            }
    
}
	
